--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -51,6 +51,7 @@
 				"modules/keyboardNav.js",
 				"modules/about.js",
 				"modules/commandLine.js",
+				"modules/advancedGold.js",
 				"modules/messageMenu.js",
 				"modules/easterEgg.js",
 				"modules/pageNavigator.js",
