--- a/Safari/Info.plist
+++ b/Safari/Info.plist
@@ -60,6 +60,7 @@
 				<string>modules/userTagger.js</string>
 				<string>modules/keyboardNav.js</string>
 				<string>modules/commandLine.js</string>
+				<string>modules/advancedGold.js</string>
 				<string>modules/messageMenu.js</string>
 				<string>modules/easterEgg.js</string>
 				<string>modules/pageNavigator.js</string>
